--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 const fns = firebase.app().functions('us-central1');
 const verifyColorPass = fns.httpsCallable('verifyColorPass');
 const getPassStatus   = fns.httpsCallable('getPassStatus');
+const getBlockhash = fns.httpsCallable('getBlockhash');
 
 // === UI elementi za colored pass (tvoj gumb i status) ===
 const colorBtn    = document.getElementById('colorWhisperBtn');
@@ -416,22 +417,17 @@ async function afterWalletConnected(pubkey){
 
 // Klik na tvoj gumb "✨ Get colored whispers — 0.01 SOL / 24 h"
 // 1-klik: otvori Phantom -> plati 0.01 SOL -> verificiraj
+// 1-klik: Phantom -> plati 0.01 SOL -> verificiraj (bez browser RPC-a)
 async function onColorBtnClick() {
   const provider = window.solana;
-  const MERCHANT = 'DstrKLkb6W6wYfDyDoMBmgDCTwkh2R4RWv6aQasWUj2F'; // mora biti isti kao na backendu
+  const MERCHANT = 'DstrKLkb6W6wYfDyDoMBmgDCTwkh2R4RWv6aQasWUj2F'; // isti kao u backendu
   const PRICE_SOL = 0.01;
 
-  if (!provider?.isPhantom) {
-    alert('Phantom wallet nije instaliran.');
-    return;
-  }
-  if (!window.solanaWeb3) {
-    alert('Greška: Solana web3 nije učitan. Osvježi stranicu.');
-    return;
-  }
+  if (!provider?.isPhantom) { alert('Phantom wallet nije instaliran.'); return; }
+  if (!window.solanaWeb3)   { alert('Solana web3 nije učitan (hard refresh).'); return; }
 
   try {
-    // ako nije spojen, spoji (otvara Phantom connect)
+    // connect ako treba
     if (!provider.publicKey) {
       const resp = await provider.connect();
       userPubkey = resp.publicKey.toString();
@@ -439,25 +435,50 @@ async function onColorBtnClick() {
       userPubkey = provider.publicKey.toString();
     }
 
+    colorStatus.textContent = 'getting blockhash…';
+    // ⬇️ blockhash s BACKENDA (callable)
+    const bh = await getBlockhash();
+    const blockhash = bh?.data?.blockhash;
+    if (!blockhash) { throw new Error('No blockhash from backend'); }
+
     colorStatus.textContent = 'opening Phantom…';
 
-    // pripremi Solana transfer 0.01 SOL
-    const connection = new window.solanaWeb3.Connection('https://api.mainnet-beta.solana.com', 'confirmed');
+    // složi transfer (bez browser Connection-a)
     const fromPubkey = provider.publicKey;
     const toPubkey   = new window.solanaWeb3.PublicKey(MERCHANT);
     const lamports   = Math.round(PRICE_SOL * 1_000_000_000);
 
-    const { blockhash } = await connection.getLatestBlockhash();
     const tx = new window.solanaWeb3.Transaction({
       feePayer: fromPubkey,
       recentBlockhash: blockhash,
     }).add(
-      window.solanaWeb3.SystemProgram.transfer({
-        fromPubkey,
-        toPubkey,
-        lamports,
-      })
+      window.solanaWeb3.SystemProgram.transfer({ fromPubkey, toPubkey, lamports })
     );
+
+    // potpis + slanje kroz Phantom
+    colorStatus.textContent = 'awaiting approval in Phantom…';
+    const { signature } = await provider.signAndSendTransaction(tx);
+
+    // (opcionalno) kratko pričekaj 2–4s
+    colorStatus.textContent = 'verifying on backend…';
+
+    // provjera passa (backend skenira uplate na tvoj MERCHANT)
+    const { data } = await verifyColorPass({ userPubkey });
+    if (data?.ok) {
+      passActive = true;
+      passUntil  = data.active_until || 0;
+      renderColorStatus();
+      colorStatus.textContent = '✅ color ACTIVE';
+      console.log('[whispr] PASS aktiviran do:', new Date(passUntil).toLocaleString());
+    } else {
+      colorStatus.textContent = '❌ payment not found';
+      console.log('[whispr] payment not found:', data?.reason);
+    }
+  } catch (e) {
+    console.error('Payment error:', e);
+    colorStatus.textContent = '❌ cancelled or failed';
+  }
+}
 
     // otvara se Phantom za potpis/slanje
     colorStatus.textContent = 'awaiting approval in Phantom…';
@@ -614,6 +635,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
