--- a/index.html
+++ b/index.html
@@ -347,28 +347,34 @@
   }
 </script>
 <!-- Firebase SDK (compat) -->
+<!-- Firebase SDK (compat) -->
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-functions-compat.js"></script>
+
+<!-- Buffer polyfill (MORA biti prije web3.js) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js"></script>
 <script>
-  // osiguraj Buffer globalno, i na globalThis i na window
-  if (!window.Buffer && window.buffer?.Buffer) { window.Buffer = window.buffer.Buffer; }
-  if (!globalThis.Buffer && window.buffer?.Buffer) { globalThis.Buffer = window.buffer.Buffer; }
+  if (window.buffer?.Buffer) {
+    window.Buffer = window.buffer.Buffer;
+    globalThis.Buffer = window.buffer.Buffer;
+  }
 </script>
-  <!-- (opcionalno, ali korisno) process/global shim za neke libove -->
+
+<!-- (opcionalno) process/global shim -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/process/0.11.10/process.min.js"></script>
 <script>
   if (!window.process) window.process = { env: {} };
-  if (!window.global) window.global = window;
+  if (!window.global)  window.global  = window;
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js"></script>
 
-<script>
-  // safety guards ako je netko minificirao/keširao drugačije
-if (!window.Buffer && window.buffer?.Buffer) { window.Buffer = window.buffer.Buffer; }
-if (!globalThis.Buffer && window.buffer?.Buffer) { globalThis.Buffer = window.buffer.Buffer; }
-  
+<!-- Solana web3 IIFE (tek nakon Buffer-a) -->
+<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js"></script>
+ <script>
+  // (dodatni guard – ok je imati ga i ovdje)
+  if (!window.Buffer && window.buffer?.Buffer) { window.Buffer = window.buffer.Buffer; }
+  if (!globalThis.Buffer && window.buffer?.Buffer) { globalThis.Buffer = window.buffer.Buffer; }
+   
 (function(){
   console.log('[whispr] boot');
 
@@ -624,6 +630,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
