--- a/index.html
+++ b/index.html
@@ -347,38 +347,33 @@
   }
 </script>
 <!-- Firebase SDK (compat) -->
-<!-- Firebase SDK (compat) -->
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-functions-compat.js"></script>
 
-<!-- Buffer polyfill (MORA biti prije web3.js) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js"></script>
+<!-- ✅ Buffer polyfill MORA biti prije web3.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-  if (window.buffer?.Buffer) {
+  // Postavi Buffer globalno (za web3.js i tvoj kod)
+  if (window.buffer && window.buffer.Buffer) {
     window.Buffer = window.buffer.Buffer;
     globalThis.Buffer = window.buffer.Buffer;
+  } else {
+    console.error('[whispr] buffer polyfill nije učitan!');
   }
-</script>
-
-<!-- (opcionalno) process/global shim -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/process/0.11.10/process.min.js"></script>
-<script>
-  if (!window.process) window.process = { env: {} };
+  // (ne škodi dodatno)
   if (!window.global)  window.global  = window;
+  if (!window.process) window.process = { env: {} };
 </script>
 
-<!-- Solana web3 IIFE (tek nakon Buffer-a) -->
-<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js"></script>
- <script>
-  // (dodatni guard – ok je imati ga i ovdje)
+<!-- ✅ Solana web3 IIFE — TEK nakon Buffer-a -->
+<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+  // Dodatni guard (ako je keš zeznuo redoslijed)
   if (!window.Buffer && window.buffer?.Buffer) { window.Buffer = window.buffer.Buffer; }
   if (!globalThis.Buffer && window.buffer?.Buffer) { globalThis.Buffer = window.buffer.Buffer; }
-   
-(function(){
-  console.log('[whispr] boot');
 
-  // 1) Init kad se sve učita (da elementi postoje)
+  (function(){
   window.addEventListener('load', function(){
     console.log('[whispr] dom ready');
 
@@ -599,9 +594,9 @@ setInterval(async () => {
       .catch(err=>console.error('[whispr] test write FAIL', err));
   });
 })();
-  const liveLayer = document.querySelector('.live-whispers');
 
-function floatLiveWhisper(text, strong = false) {
+
+{
   if (!liveLayer || !text) return;
   const span = document.createElement('span');
   span.textContent = text;
@@ -616,20 +611,11 @@ function floatLiveWhisper(text, strong = false) {
   liveLayer.appendChild(span);
   setTimeout(() => span.remove(), 12000);
 }
-
-// 🔁 sluša samo nove whispere iz baze
-db.ref('whispers')
-  .orderByChild('time')
-  .limitToLast(20)
-  .on('child_added', snap => {
-    const w = snap.val();
-    if (!w || !w.text) return;
-    floatLiveWhisper(w.text, false);
-  });
 </script>
 </body>
 
 </html>
+
 
 
 
