--- a/index.html
+++ b/index.html
@@ -351,12 +351,17 @@
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-functions-compat.js"></script>
 
-<!-- ✅ Buffer polyfill koji SAM stavi globalni Buffer -->
-<script src="https://unpkg.com/buffer@6.0.3/index.js"></script>
+<!-- ✅ Buffer polyfill (ova verzija izlaže window.buffer.Buffer) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js" crossorigin="anonymous"></script>
 <script>
-  // safety (u slučaju cache-a)
-  if (!window.Buffer && window.buffer?.Buffer) window.Buffer = window.buffer.Buffer;
-  if (!globalThis.Buffer && window.buffer?.Buffer) globalThis.Buffer = window.buffer.Buffer;
+  // Mapiraj na globalne
+  if (window.buffer && window.buffer.Buffer) {
+    window.Buffer = window.buffer.Buffer;
+    globalThis.Buffer = window.buffer.Buffer;
+  } else {
+    console.error('[whispr] buffer polyfill NIJE učitan');
+  }
+  // (mali shims, ne štete)
   if (!window.global)  window.global  = window;
   if (!window.process) window.process = { env: {} };
 </script>
@@ -625,6 +630,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
