--- a/index.html
+++ b/index.html
@@ -351,27 +351,16 @@
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-functions-compat.js"></script>
 
-<!-- ✅ Buffer polyfill (ova verzija izlaže window.buffer.Buffer) -->
+<!-- Buffer polyfill -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js" crossorigin="anonymous"></script>
-<script>
-  // Mapiraj na globalne
-  if (window.buffer && window.buffer.Buffer) {
-    window.Buffer = window.buffer.Buffer;
-    globalThis.Buffer = window.buffer.Buffer;
-  } else {
-    console.error('[whispr] buffer polyfill NIJE učitan');
-  }
-  // (mali shims, ne štete)
-  if (!window.global)  window.global  = window;
-  if (!window.process) window.process = { env: {} };
-</script>
 
-<!-- ✅ Solana web3 IIFE — TEK nakon Buffer-a -->
-<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
-  if (!window.Buffer && window.buffer?.Buffer) window.Buffer = window.buffer.Buffer;
-  if (!globalThis.Buffer && window.buffer?.Buffer) globalThis.Buffer = window.buffer.Buffer;
-   
+<!-- ✅ OVAJ NOVI FAJL MORA BITI IZMEĐU buffer.min.js i web3.js -->
+<script src="./buffer-setup.js"></script>
+<!-- Ako ti je index.html u /docs, onda je opet ./buffer-setup.js jer je u istom folderu -->
+
+<!-- Solana web3 IIFE (nakon buffer-setup.js) -->
+<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js" crossorigin="anonymous"></script>
+ <script>
 (function(){
   console.log('[whispr] boot');
 
@@ -635,6 +624,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
