--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-functions-compat.js"></script>
 
 <!-- Buffer polyfill -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/buffer/6.0.3/buffer.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
 
 <!-- ✅ OVAJ NOVI FAJL MORA BITI IZMEĐU buffer.min.js i web3.js -->
 <script src="./buffer-setup.js"></script>
@@ -624,6 +624,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
