--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
 
 <!-- ✅ OVAJ NOVI FAJL MORA BITI IZMEĐU buffer.min.js i web3.js -->
-<script src="./buffer-setup.js"></script>
+<script src="./buffer-shim.js"></script>
 <!-- Ako ti je index.html u /docs, onda je opet ./buffer-setup.js jer je u istom folderu -->
 
 <!-- Solana web3 IIFE (nakon buffer-setup.js) -->
@@ -624,6 +624,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
