--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
 
 <!-- ✅ OVAJ NOVI FAJL MORA BITI IZMEĐU buffer.min.js i web3.js -->
-<script src="./buffer-shim.js"></script>
+<script src="./buffer-shim.js?v=1.0.1"></script>
 <!-- Ako ti je index.html u /docs, onda je opet ./buffer-setup.js jer je u istom folderu -->
 
 <!-- Solana web3 IIFE (nakon buffer-setup.js) -->
@@ -628,6 +628,7 @@
 </body>
 
 </html>
+
 
 
 
